Fix related post alignment in mobile view

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -300,6 +300,7 @@ main {
       height: 100%;
       width: 100%;
       margin-bottom: 1em;
+      margin-left: 0;
     }
   }
   h1 {
